crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/virtual_constructor/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 7001] Error: Constructors cannot be virtual.
   ╭─[input.sol:8:5]
   │
 8 │     constructor() virtual {}
   │     ────────────┬───────────  
   │                 ╰───────────── Error occurred here.
───╯
